# Image-Description-Toolkit

./: .gitignore  CONFIGURATION.md  CONVERT_README.md  ConvertImage.py  DescribeImage.py  DescribeImageDocumentation.txt  GUI_README.md  LICENSE  README.md  REORGANIZATION_SUMMARY.md  TESTING_GUIDE.md  VideoREADME.md  comprehensive_test.py  config.json  convert_requirements.txt  create_shortcut.py  descriptions_to_html.py  frame_extractor_config_new.json  gui_requirements.txt  html_converter.py  image_describer.py  image_description_gui.py  launcher.py  models  pyproject.toml  quick_test.bat  requirements.txt  run_gui.bat  run_gui.ps1  test_gui.py  test_html_generation.py  video_frame_extractor.py  video_frame_extractor_config.json  workflow.py  workflow_clean.py  workflow_wrapper.py
comprehensive_test_20250728_115411/gemma3_latest_Narrative/descriptions/: image_descriptions.txt
comprehensive_test_20250728_115411/gemma3_latest_Narrative/html_reports/: image_descriptions.html
comprehensive_test_20250728_115411/gemma3_latest_artistic/descriptions/: image_descriptions.txt
comprehensive_test_20250728_115411/gemma3_latest_artistic/html_reports/: image_descriptions.html
comprehensive_test_20250728_115411/gemma3_latest_concise/descriptions/: image_descriptions.txt
config/: image_describer_config.json  workflow_config.json
custom_results/: EQp038-004.json  p004-002.json  p021-001.json  p045-001.json  p046-001.json
docs/: BLOG_POST.md  BLOG_POST_V2.md  CONFIGURATION.md  CURRENT_PROJECT_STATUS.md  ConvertImage_README.md  IMPLEMENTATION_SUMMARY.md  NAMING_CONSISTENCY_UPDATE.md  README_OLD.md  REQUIREMENTS_CONSOLIDATION.md  SIMPLIFICATION_UPDATE.md  TESTING_README.md  WORKFLOW_README.md  descriptions_to_html_README.md  image_describer_README.md  video_frame_extractor_README.md
scripts/: ConvertImage.py  analyze_recovered_data.py  analyze_runaway_experiment.py  convert_mkv_to_mp4.bat  debug_ollama.py  descriptions_to_html.py  extended_prompt_discovery.py  image_describer.py  image_describer_config.json  monitor_experiment.py  monitor_madness.py  monitor_multi_model_madness.py  multi_model_prompt_madness_FIXED.py  project_cleanup.py  quick_analyze_runaway.py  quick_model_check.py  quick_prompt_test.py  quick_test.py  ultimate_prompt_madness_FIXED.py  video_frame_extractor.py  video_frame_extractor_config.json  workflow.py  workflow_config.json  workflow_utils.py
tests/: comprehensive_test.py  demo_workflow.py  generate_test_images.py  run_tests.py  test_convert_image.py  test_descriptions_to_html.py  test_image_describer.py  test_video_frame_extractor.py  test_workflow.py  test_workflow_utils.py
tests/test_files/: test_descriptions.txt  test_workflow.py
(+17 files in other folders)
